Import of MAROS/MooseX-App-1.01 from CPAN.
gitpan-cpan-distribution: MooseX-App
gitpan-cpan-version:      1.01
gitpan-cpan-path:         MAROS/MooseX-App-1.01.tar.gz
gitpan-cpan-author:       MAROS
gitpan-cpan-maturity:     released

--- a/MYMETA.yml
+++ b/MYMETA.yml
@@ -1,5 +1,5 @@
 ---
-abstract: 'write user-friendly command line apps with even less suffering'
+abstract: 'Write user-friendly command line apps with even less suffering'
 author:
   - 'Maroš Kollár'
 build_requires:
@@ -30,6 +30,7 @@ requires:
   Path::Class: 0
   Pod::Elemental: 0
   String::CamelCase: 0
+  namespace::autoclean: 0
   perl: 5.010
 resources:
   license: http://dev.perl.org/licenses/
