--- a/MYMETA.yml
+++ b/MYMETA.yml
@@ -1,15 +1,15 @@
 ---
 abstract: 'Write user-friendly command line apps with even less suffering'
 author:
-  - 'MaroÅ¡ KollÃ¡r'
+  - 'Maroš Kollár'
 build_requires:
   ExtUtils::MakeMaker: 6.59
   Test::Most: 0
   Test::NoWarnings: 0
 configure_requires:
-  ExtUtils::MakeMaker: 0
+  ExtUtils::MakeMaker: 6.59
 dynamic_config: 0
-generated_by: 'ExtUtils::MakeMaker version 6.6302, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Module::Install version 1.06, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -17,8 +17,13 @@ meta-spec:
 name: MooseX-App
 no_index:
   directory:
-    - t
     - inc
+    - t
+    - xt
+recommends:
+  File::HomeDir: 0
+  Term::ANSIColor: 0
+  Text::WagnerFischer: 0
 requires:
   Config::Any: 0
   List::Util: 0
@@ -31,4 +36,7 @@ requires:
   String::CamelCase: 0
   namespace::autoclean: 0
   perl: 5.010
-version: 1.11
+resources:
+  license: http://dev.perl.org/licenses/
+  repository: git://github.com/maros/MooseX-App.git
+version: 1.12
