--- a/META.yml
+++ b/META.yml
@@ -27,17 +27,16 @@ recommends:
   Text::WagnerFischer: 0
 requires:
   Config::Any: 0
+  IO::Interactive: 0
   List::Util: 0
   Module::Pluggable: 0
   Moose: 2.00
-  MooseX::Getopt: 0.43
   MooseX::Types::Path::Class: 0
   Path::Class: 0
   Pod::Elemental: 0
-  String::CamelCase: 0
   namespace::autoclean: 0
   perl: 5.10.0
 resources:
   license: http://dev.perl.org/licenses/
   repository: git://github.com/maros/MooseX-App.git
-version: 1.15
+version: 1.16
