--- a/META.yml
+++ b/META.yml
@@ -10,7 +10,7 @@ configure_requires:
   ExtUtils::MakeMaker: 6.59
 distribution_type: module
 dynamic_config: 1
-generated_by: 'Module::Install version 1.06'
+generated_by: 'Module::Install version 1.10'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -25,6 +25,7 @@ recommends:
   File::HomeDir: 0
   IO::Interactive: 0
   Term::ANSIColor: 0
+  Term::ReadKey: 0
   Text::WagnerFischer: 0
 requires:
   Config::Any: 0
@@ -39,4 +40,4 @@ requires:
 resources:
   license: http://dev.perl.org/licenses/
   repository: git://github.com/maros/MooseX-App.git
-version: 1.29
+version: 1.30
